--- a/HTML/style.css
+++ b/HTML/style.css
@@ -1,3 +1,12 @@
+body{
+    background-image: url("./img2.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    text-align: center;
+}
 h1{
-    color: blueviolet;
+color: blueviolet;
+}
+h2{
+    color:brown;
 }
