--- a/HTML/Template/Template1.html
+++ b/HTML/Template/Template1.html
@@ -12,10 +12,10 @@
 <body>
     <div id="div1" class="row1">
         <div id="r1">
-            <header id="head" class ="clear">
+            <header id="head" class="clear">
                 <div id="h_div1">
                     <h1><a href="#">Basic 88</a></h1>
-                    <h2>Free HTML5 Website Templat<e/h2>
+                    <h2>Free HTML5 Website Templat</h2>
                 </div>
                 <nav>
                     <ul>
@@ -44,16 +44,16 @@
                 </a>
             </section>
             <div id="home">
-                <section class = "clear" id = "second">
+                <section class="clear" id="second">
                     <article class="one">
                         <figure>
                             <img src="../Template/template_images/290x180.gif" alt="" width="290" height="180">
                             <figcaption>
-                                <h2 id = "nn">Indonectetus facilities</h2>
+                                <h2 id="nn">Indonectetus facilities</h2>
                                 <p>
                                     Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.
                                 </p>
-                                <footer class = "more">
+                                <footer class="more">
                                     <a href="#">Read More >></a>
                                 </footer>
                             </figcaption>
@@ -62,10 +62,74 @@
                     <article class="one">
                         <figure>
                             <img src="../Template/template_images/290x180.gif" alt="" width="290" height="180">
+                            <figcaption>
+                                <h2 id="nn">Indonectetus facilities</h2>
+                                <p>
+                                    Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.
+                                </p>
+                                <footer class="more">
+                                    <a href="#">Read More >></a>
+                                </footer>
+                            </figcaption>
+                        </figure>
+                    </article>
+                    <article class="one_third">
+                        <figure>
+                            <img src="../Template/template_images/290x180.gif" alt="" width="290" height="180">
+                            <figcaption>
+                                <h2 id="nn">Indonectetus facilities</h2>
+                                <p>
+                                    Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.
+                                </p>
+                                <footer class="more">
+                                    <a href="#">Read More >></a>
+                                </footer>
+                            </figcaption>
                         </figure>
                     </article>
                 </section>
+                <section id="intro" class="last">
+                    <articl>
+                        <figure>
+                            <img src="../Template/template_images/450x250.gif " alt="" width="450" height="250">
+                            <figcaption>
+                                <h2 id = "kk">Indonectetus facilis leo nibh</h2>
+                                <p>This is a W3C compliant free website template from<a href="https://www.os-templates.com" title="Free Website Template">OS Templates</a>. For full terms of use of this template please read our<a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
+                                <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit<a href="https://www.os-templates.com">free website templates</a>.</p>
+                                <footer class="more">
+                                    <a href="#">Read More >></a>
+                                </footer>
+                            </figcaption>
+                        </figure>
+                    </articl>
+                </section>
             </div>
+        </div>
+    </div>
+    <div id="div3" class="r3 ">
+        <div id="footer" class="clear">
+            <section class="one">
+                <h2 class="title">Link Block</h2>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">Lorem ipsum dolor sit</a>
+                        </li>
+                        <li>
+                            <a href="#">Amet consectetur</a>
+                        </li>
+                        <li>
+                            <a href="#">Praesent vel sem id</a>
+                        </li>
+                        <li>
+                            <a href="#">Curabitur hendrerit est</a>
+                        </li>
+                        <li class="last">
+                            <a href="#">Sed a nulla urna</a>
+                        </li>
+                    </ul>
+                </nav>
+            </section>
         </div>
     </div>
 </body>
