--- a/DAY3 ASSIGNMENT/DAy4 assignment/style.css
+++ b/DAY3 ASSIGNMENT/DAy4 assignment/style.css
@@ -58,3 +58,15 @@
                     color: orange;
                     cursor: pointer;
                 }
+#row2{
+    margin:40px 30px 50px 200px;
+    overflow: auto;
+}
+
+.image1{
+    float:left;
+    margin-right:10px;
+    border:1px solid black;
+    display: block;
+    text-align: center;
+}
