--- a/DAY3 ASSIGNMENT/DAy4 assignment/style.css
+++ b/DAY3 ASSIGNMENT/DAy4 assignment/style.css
@@ -63,10 +63,42 @@
     overflow: auto;
 }
 
-.image1{
+    .image1{
     float:left;
     margin-right:10px;
     border:1px solid black;
     display: block;
     text-align: center;
 }
+#row3{
+    border: 1px solid black;
+    margin:40px 200px 50px 195px;
+    text-align: center;
+    font-size: 20px;
+}
+
+#row4{
+    margin:0px 200px 50px 195px;
+    border:1px solid black;
+    height:400px;
+    padding: 30px;
+}
+    #category{
+        height: 300px;
+        border: 1px solid black;
+        float:right;
+        list-style-type: none;
+        padding: 30px;
+    }
+        #category ul{
+            list-style-type: none;
+        }
+            #category ul li{
+                color:black;
+                text-align: center;
+            }
+                #category ul li a{
+                    color:black;
+                    text-align: center;
+                }
+    
