--- a/DAY3 ASSIGNMENT/DAy4 assignment/style.css
+++ b/DAY3 ASSIGNMENT/DAy4 assignment/style.css
@@ -1,9 +1,12 @@
 *{
     margin:0px;
-    padding:0px;
 }
+a{
+    text-decoration: none;
+}
+    
 #row1{
-    background-color: black;
+    background-color:#272323;;
     padding:20px 60px;
     overflow: auto;
     display: block;
@@ -32,7 +35,7 @@
                     text-decoration: none;
                 }
                 #hgroup h2{
-                    font-size: 13px;
+                    font-size: 15px;
                     font-weight: normal;
                     text-transform: none;
                 }
@@ -41,25 +44,25 @@
                     margin: 0px 0 0 0;
                     padding: 20px 0;
                     color: #C0BAB6;
-                    background-color: #232323;
+                    background-color: #0a0909;
                     
                 }
                 #nav ul{
                     padding: 0 20px;
                     list-style-type: none;
-                    background-color: #232323;
+                    background-color:none;
                 }
                 #nav ul li{
                     display: inline;
                     margin-right: 25px;
                     text-transform: uppercase;
                 }
-                #nav ul li:hover{
+                #nav ul li a:hover{
                     color: orange;
                     cursor: pointer;
                 }
 #row2{
-    margin:40px 30px 50px 200px;
+    margin:40px 30px 30px 200px;
     overflow: auto;
 }
 
@@ -69,22 +72,25 @@
     border:1px solid black;
     display: block;
     text-align: center;
+    height:315px;
+    width:215px;
 }
 #row3{
     border: 1px solid black;
-    margin:40px 200px 50px 195px;
+    margin:10px 200px 20px 195px;
     text-align: center;
     font-size: 20px;
+    background-color: rgb(184, 161, 131);
 }
 
 #row4{
-    margin:0px 200px 50px 195px;
-    border:1px solid black;
+    margin:0px 200px 0px 195px;
+    border:0px solid black;
     height:400px;
     padding: 30px;
 }
     #category{
-        height: 300px;
+        height: 310px;
         border: 1px solid black;
         float:right;
         list-style-type: none;
@@ -101,4 +107,55 @@
                     color:black;
                     text-align: center;
                 }
-    
+    .imageandtext{
+        width:500px;
+        height: 330px;
+        border: 1px solid black;
+        float:left;
+        list-style-type: none;
+        padding: 30px;
+        padding-top: 10px;
+        display: block;
+    }
+        #imageandtext1{
+            padding:10px;
+            height:150px;
+            border:0px solid black;
+        }
+        #imageandtext2{
+            padding:10px;
+            height:150px;
+            border:0px solid black;
+            margin-top: 10px;
+        }
+            .imgs{
+                border:1px solid blue;
+                margin-right: 0px;
+            }
+            #hgroup1{
+                float:right;
+                display: inline;
+                border:1px solid black;
+                margin: 0px;
+                padding: 0px;
+                height:150px;
+                width:280px;
+            }
+            #hgroup1 h1{
+                color:black;
+            }
+                #hgroup1 a{
+                    float:right;
+                    padding-top:8px;
+                    color:blueviolet;
+                    text-decoration: none;
+                }
+
+#row5{
+    margin-top:0px;
+    background-color: black;
+    width: 100%;
+    padding:20px;
+    overflow: auto;
+
+}
