--- a/HTML/Template/Template2.css
+++ b/HTML/Template/Template2.css
@@ -71,6 +71,10 @@ nav ul{
     margin-right: 25px;
     display: inline;
 }
+#header nav ul li a:hover{
+    color: orange;
+    cursor: pointer;
+}
 #header nav li.last {
     margin-right: 0;
 }
@@ -131,4 +135,154 @@ img {
 }
 .lastbox{
     margin-right: 0;
+}
+#container #shout{
+    padding: 0 0 20px 0;
+    text-align: center;
+    border-bottom: 1px solid #dedede;
+}
+#container #shout p{
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+    line-height: 0.8cm;
+}
+#container #content{
+    float: left;
+    width: 630px;
+
+}
+#container .last{
+    margin: 0;
+}
+#container #content #services ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+#container #content #services ul li {
+    display: block;
+    width: 100%;
+    margin-bottom: 30px;
+}
+.clear {
+    display: block;
+    clear: both;
+}
+#container #content #services ul li article figure img {
+    float: left;
+    width: 180px;
+    height: 150px;
+    margin: 0;
+    padding: 4px;
+    border: 1px solid #666666;
+}
+#container #content #services ul li article figure figcaption {
+    display: block;
+    float: right;
+    width: 410px;
+}
+#container #content #services ul li article figure h2 {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    font-weight: bold;
+    font-style: normal;
+    line-height: 0.8cm;
+    text-transform: uppercase;
+}
+.row2 a{
+    color: #ff9900;
+}
+#container .more{
+    text-align: right;
+}
+#container p{
+    line-height: 0.8cm;
+}
+#container #content #services ul li.last {
+    margin-bottom: 0;
+}
+#container .last{
+    margin: 0;
+}
+#content{
+    line-height: 1.8cm;
+}
+aside{
+    display: block;
+    margin: 0;
+    padding: 0;
+}
+#container #right_column{
+    float: right;
+    width: 280px;
+}
+#container #right_column h2.title {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #DEDEDE;
+    font-size: 16px;
+    font-weight: bold;
+    font-style: normal;
+    line-height: normal;
+    text-transform: uppercase;
+}
+#container #right_column nav {
+    display: block;
+    width: 100%;
+}
+#container #right_column nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+#container #right_column nav li {
+    margin: 0 0 3px 0;
+    padding: 0;
+}
+#container #right_column nav a {
+    display: block;
+    margin: 0;
+    padding: 5px 10px 5px 20px;
+    color: #666666;
+    background: url("../Template/template_images/orange_file.gif") no-repeat 10px center #FFFFFF;
+    text-decoration: none;
+    border-bottom: 1px dotted #666666;
+    line-height: normal;
+}
+#container #right_column nav ul li a:hover{
+    color: orange;
+}
+.row3{
+    color: #919191;
+    background-color: #232323;
+    overflow: auto;
+}
+.row3 a {
+    color: #919191;
+    background-color: #232323;
+} 
+a {
+    outline: none;
+    text-decoration: none;
+}
+#footer{
+    display: block;
+    width: 960px;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+.clear{
+    clear: both;
+}
+#footer p {
+    margin: 0;
+    padding: 0;
+}
+.f1_left{
+    float: left;
+}
+.f1_right{
+    float: right;
 }
