--- a/HTML/Template/Template2.html
+++ b/HTML/Template/Template2.html
@@ -66,8 +66,102 @@
                         </figure>
                     </article>
                 </section>
+                <section id="shout">
+                    <p>
+                        Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.
+                    </p>
+                </section>
             </div>
+            <div id="content">
+                <section id="services" class="last clear">
+                    <ul>
+                        <li>
+                            <article class="clear">
+                                <figure>
+                                    <img src="../Template/template_images/180x150.gif" alt="">
+                                    <figcaption>
+                                        <h2>Indonectetus facilis leo nibh</h2>
+                                        <p>
+                                            This is a W3C compliant free website template from
+                                            <a href="https://www.os-templates.com/" title="Free Website Templates">Os Templates</a>. For full terms of use of this template please read our<a href="https://www.os-templates.com/templates-terms">website template licence</a>.
+                                        </p>
+                                        <footer class="more">
+                                            <a href="#">Read More>></a>
+                                        </footer>
+                                    </figcaption>
+                                </figure>
+                            </article>
+                        </li>
+                        <li class="last">
+                            <article class="clear">
+                                <figure>
+                                    <img src="../Template/template_images/180x150.gif" alt="">
+                                    <figcaption>
+                                        <h2>Indonectetus facilis leo nibh</h2>
+                                        <p>
+                                            This is a W3C compliant free website template from
+                                            <a href="https://www.os-templates.com/" title="Free Website Templates">Os Templates</a>. For full terms of use of this template please read our<a href="https://www.os-templates.com/templates-terms">website template licence</a>.
+                                        </p>
+                                        <footer class="more">
+                                            <a href="#">Read More>></a>
+                                        </footer>
+                                    </figcaption>
+                                </figure>
+                            </article>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+            <aside id="right_column">
+                <h2 class="title">Categories</h2>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">Free WebSite Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free CSS Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free XHTML Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free Web  Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free WebSite Layouts</a>
+                        </li>
+                        <li>
+                            <a href="#">Free HTML5 Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free Webdesign Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free Fire Works Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free PNG Templates</a>
+                        </li>
+                        <li class="last">
+                            <a href="#">Free WebSite Themes</a>
+                        </li>
+                    </ul>
+                </nav>
+            </aside>
         </div>
+    </div>
+    <div class="wrapper row3">
+        <footer class="footer clear">
+            <p class="f1_left">
+                Copyright © 2018 - All Rights Reserved - 
+                <a href="#">Domain Name</a>
+            </p>
+            <p class="f1_right">
+                Template by 
+                <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates">Os Templates</a>
+            </p>
+        </footer>
     </div>
 </body>
 </html>
