--- a/HTML/Template/Template2.html
+++ b/HTML/Template/Template2.html
@@ -152,14 +152,14 @@
         </div>
     </div>
     <div class="wrapper row3">
-        <footer class="footer clear">
+        <footer id="footer" class="clear">
             <p class="f1_left">
-                Copyright © 2018 - All Rights Reserved - 
+                Copyright © 2018 - All Rights Reserved -
                 <a href="#">Domain Name</a>
             </p>
             <p class="f1_right">
-                Template by 
-                <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates">Os Templates</a>
+                Template by
+                <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates"> Os Templates</a>
             </p>
         </footer>
     </div>
