--- a/templates/movie_poster.html
+++ b/templates/movie_poster.html
@@ -3,7 +3,7 @@
 <head>
 <title>Movies</title>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="./template4_style.css" type="text/css">
+<link rel="stylesheet" href="./movie_poster_style.css" type="text/css">
 </head>
 <body>
 <div class="wrapper row1">
@@ -32,7 +32,7 @@
 </div>
 <div class="wrapper row2">
   <div id="container" class="clear">
-    <section id="slider"><a href="#"><img src="images/pk.jpg" width="960" height="360" alt=""></a></section>
+    <section id="slider"><a href="#"><img src="./images/power.jpg" width="960" height="360" alt=""></a></section>
     <section id="shout">
       <p>Bheemla Nayak is an upcoming Telugu language action thriller film directed by Saagar K. Chandra from a screenplay written by Trivikram Srinivas. It is a remake of the 2020 Malayalam film Ayyappanum Koshiyum by Sachy. Produced by Suryadevara Naga Vamsi of Sithara Entertainments, the film stars Pawan Kalyan, Rana Daggubati, and Nithya Menen.</p>
     </section>
