--- a/templates/spaceX.html
+++ b/templates/spaceX.html
@@ -4,7 +4,7 @@
 <head>
     <title>SpaceX</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./template2_style.css">
+    <link rel="stylesheet" href="./spaceX_style.css">
 </head>
 
 <body>
