changed padding in section 4 from 4px to 4px 2px

--- a/HTML/Template Practice/template Basic 84/styles.css
+++ b/HTML/Template Practice/template Basic 84/styles.css
@@ -206,7 +206,7 @@ nav ul .last{
 
 }
 #section4 article figure{
-    padding:4px;
+    padding:4px 2px;
     border: 1px solid #D6D6D6;
 }
 #section4 article figure img{
