added small changes

--- a/HTML/Template Practice/template Basic 84/styles.css
+++ b/HTML/Template Practice/template Basic 84/styles.css
@@ -21,7 +21,7 @@ a{
 }
 
 .row1{
-    background-color: #333333;
+    background-color: #565df8;
 }
 .wrapper{
     width:100%;
@@ -30,7 +30,7 @@ a{
 header{
     width:960px;
     margin:0 auto;
-    background-color:#333333;
+    background-color:#565df8;
     padding:20px 0;
 }
 /* ============================Title========================== */
