--- a/HTML/Template/Template2.html
+++ b/HTML/Template/Template2.html
@@ -30,7 +30,7 @@
                     <li>
                         <a href="#">Text Link</a>
                     </li>
-                    <li id="last">
+                    <li class="last">
                         <a href="#">Text Link</a>
                     </li>
                 </ul>
@@ -66,7 +66,7 @@
                         </figure>
                     </article>
                 </section>
-                <section id="shout">
+                <section class="shout">
                     <p>
                         Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.
                     </p>
