--- a/HTML/Template/Template6.html
+++ b/HTML/Template/Template6.html
@@ -148,7 +148,7 @@
         </div>
     </div>
     <div class="spacer"></div>
-    <div class="wrapper row3" style="height: 55px;">
+    <div class="wrapper row3">
         <footer id="footer" class="clear">
             <p class="f1_left">
                 Copyright © 2018 - All Rights Reserved - 
