--- a/HTML/Template/template11.css
+++ b/HTML/Template/template11.css
@@ -43,13 +43,16 @@ div.wrapper{
     font-weight: normal;
     text-transform: none;
 }
+#hgroup h1 a{
+    background-color: #333333;
+}
 a{
     outline: none;
     text-decoration: none;
 }
 .row1 a{
     color: #C0BAB6;
-    background-color: #333333;
+    background-color: #232323;
     text-decoration: none;
     outline: none;
 }
@@ -82,12 +85,13 @@ a{
     color:orange;
     cursor: pointer;
 }
-.last{
-    margin-right: 0 auto;
+#header nav ul li.last{
+    margin-right: 0;
 }
 .row2{
     color: #979797;
     background-color: #FFFFFF;
+    overflow: auto;
 }
 #container{
     padding: 30px 0;
@@ -184,11 +188,11 @@ h2{
     font-size: 32px;
     font-weight: normal;
     font-style: italic;
-    line-height: 1.8cm;
 }
 .row3{
     color: #989898;
     background-color: #333333;
+    overflow: auto;
 }
 #footer{
     padding: 30px 0;
@@ -236,8 +240,10 @@ h2{
 .row4{
     color: #919191;
     background-color: #232323;
+    overflow: auto;
+    height: 55px;
 }
-.row a{
+.row4 a{
     color: #919191;
     background-color: #232323;
 }
@@ -246,6 +252,7 @@ footer{
     padding: 0;
     margin: 0;
 }
+
 #copyright{
     display: block;
     width: 960px;
