--- a/project01/1.css
+++ b/project01/1.css
@@ -1,44 +1,61 @@
-
-body{
-        margin: 0;
-        padding: 0;
-        font-size: 13px;
-        font-family: Georgia, "Times New Roman", Times, serif;
-        color: #919191;
-        background-color: #232323;
-    }
-}
-.sub1{
-    color: red;
-    background-color: lightblue;
-    padding: 20px 0 20px 0;
-}
-
-.maincamp {                                                                                      
-    width: 100%;
+body {
+    font-size: 13px;
     margin: 0;
-    padding: 10px 0 0 0;
-    text-align: left;
-   
+    padding: 0;
+    columns: #919191;
 }
-    
-header{
+div.maincamp{
+    text-align: left;
+}
+
+
+.maincamp{
     display: block;
     width: 100%;
-    margin: 0 auto;
-    overflow: auto;
-    padding: 20px o;
+    padding: 0;
+    margin: 0;
+    text-align: left;
 }
-
-#header h1{
-    text-decoration: none;
+.sub1{
+    color: #C0BAB6;
+    background-color: blueviolet;
+    padding: 0%;
+}
+#header{
+    display: block;
+    margin: 0 auto;
+    width: 960px;
+    padding: 20px 0;
+    overflow: auto;
+}
+.clear{
+    clear: both;
 }
 #hgroup{
+    float: left;
+    margin: 0 0 20px 0;
+}
+#hgroup h1{
+    font-size: 40px;
+    font-weight: normal;
+    text-transform: none;
 
-    float:left;
-    margin:0 0 20px 0;
-    
-
+   
+}
+a{
+    outline: none;
+    text-decoration: none;
+.sub1 a{
+    outline: none;
+    text-decoration: none;
+    color: #C0BAB6;
+    text-decoration: none;
+    outline: none;
+}
+#hgroup h2{
+    font-weight: normal;
+    text-transform: none;
+    font-size: 15px;
 }
 #header nav{
     display: block;
@@ -46,124 +63,24 @@ header{
     margin: 10px 0 0 0;
     padding: 20px 0;
     color: #C0BAB6;
+    background-color: #232323;
 }
-nav ul {
-    margin: 0;
-    padding: 20px ;
+#header nav ul{
+    padding: 0 20px;
     list-style: none;
 }
-#header nav li{
-display: inline;
+.clear{
+    clear: both;
+}
+#header nav ul li{
+    display: inline;
     margin-right: 25px;
     text-transform: uppercase;
 }
 #header nav ul li a:hover{
     color:orange;
     cursor: pointer;
-    text-decoration: none;
 }
-.clear{
-    clear: both;
-}
-div.camp2 {
-    display: block;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    text-align: left;
-}
-#container {
-    padding: 30px 0;
-}
-#container section {
-    display: block;
-    width: 100%;
-    margin: 0 0 30px 0;
-    padding: 0;
-}
-
-a {
-    outline: none;
-    text-decoration: none;
-}
-.sub2 {
-    color: #979797;
-    background-color: #FFFFFF;
-}
-#container .homepage {
-    display: block;
-    width: 0  auto;
-    line-height: 1.8em;
-    float: left;
-}
-#container{
-    font-size: 13px;
- 
-}
-.camp2{
-    width: 100%;
-    margin: 0;
-    padding: 10px 0 0 0;
-    text-align: left;
-   
-
-} 
-#services{
-display: block;
-    width: 960px;
-    margin: 0 auto;
-}
-  img{
-    margin: 0;
-    padding: 0;
-    border: none;
-    line-height: normal;
-    vertical-align: middle;
-    float: left;
-    
-}
-#homepage {
-    display: block;
-    width: 100%;
-    line-height: 1.8em;
-} #homepage {
-    display: block;
-    width: 100%;
-    line-height: 1.8em;
-}
-#container section {
-    display: block;
-    width: 100%;
-    margin: 0 0 30px 0;
-    padding: 0 0 20px 0 ;
-    float: left;
-    overflow: auto;
-}
-.one_third {
-    width: 300px;
-}
-.one_third, .two_third, .three_third {
-    display: block;
-    float: left;
-    margin: 0 30px 0 0;
-}
-figure {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 40px;
-    margin-inline-end: 40px;
-}
-h2 {
-    display: block;
-    font-size: 1.5em;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-}
-h1{
-    font-size: 2.5em;
-    padding: 0 0 0 0;
+.last{
+    margin-right: 0 auto;
 }
