--- a/harsha sample/spacex/style.css
+++ b/harsha sample/spacex/style.css
@@ -55,7 +55,7 @@ code {
 img {
     margin: 0;
     padding: 0;
-    border: none;
+    border: 20px;
     line-height: normal;
     vertical-align: middle;
 }
