--- a/oct 19&20work/basic-88/styles/layout.css
+++ b/oct 19&20work/basic-88/styles/layout.css
@@ -137,3 +137,47 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 
 #copyright{padding:20px 0;}
 #copyright p{margin:0; padding: 0;}
+
+#sidebar{
+    position: absolute;
+    width: 150px;
+    background: #333333;
+    text-align: center;
+    margin: 10px 0 0 10px;
+}
+#sidebar ul li{
+    border: 2px solid white;
+    padding: 10px;
+}
+#sidebar ul li a{
+    color: white;
+}
+#sidebar ul li a:hover{
+    color: #FF9900;
+}
+#sidebar ul li:hover{
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+}
+.drop{
+    display: none;
+    position: absolute;
+    top: 150px;
+    left: 150px
+}
+.oo ul li{
+    background: #232323;
+    width: 100px;
+}
+.oo:hover .drop{
+    display: block;
+}.oo ul li:hover{
+    background: red;
+}
+img{
+    opacity: 0.5 ;
+}
+img:hover{
+    opacity: 1;
+}
