--- a/templates/10000coders_style.css
+++ b/templates/10000coders_style.css
@@ -2,6 +2,26 @@
         html {
             overflow-y: scroll;
         }
+        *{
+            margin:0;
+            padding:0;
+            font-family: Georgia, "Times New Roman", Times, serif;
+        }
+        #row_container_1{
+            width:100%;
+            margin:0 auto;
+            background-color:#333333;
+            padding-top:20px;
+            overflow:auto;
+        }
+        header{
+            width:960px;
+            background-color:#333333;
+            /* background-color:red; */
+            margin:0 auto;
+            overflow: auto;
+
+        }
 
         body {
             margin: 0;
