--- a/templates/10000coders.html
+++ b/templates/10000coders.html
@@ -3,7 +3,16 @@
 <head>
 <title>10000 coders</title>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" href="10000coders_style.css" type="text/css">
+<style>
+   @media only screen and (max-width:768px){
+            #header{
+                width:100%;
+            }
+        } 
+</style>
 </head>
 <body>
 <div class="wrapper row1">
@@ -23,7 +32,7 @@
     </nav>
   </header>
 </div>
-<div class="wrapper row2">
+<!-- <div class="wrapper row2">
   <div id="container" class="clear">
     <section id="slider" class="clear">
       <figure><img src="./images/murali sir.jpg" alt="">
@@ -101,6 +110,6 @@
     <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
     <p class="fl_right">Website by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">Hari Vardhan</a></p>
   </footer>
-</div>
+</div> -->
 </body>
 </html>
