--- a/templates/10000coders_style.css
+++ b/templates/10000coders_style.css
@@ -14,7 +14,7 @@
             padding-top:20px;
             overflow:auto;
         }
-        header{
+        #header{
             width:960px;
             background-color:#333333;
             /* background-color:red; */
@@ -23,6 +23,9 @@
 
         }
 
+       
+            
+        
         body {
             margin: 0;
             padding: 0;
@@ -150,7 +153,7 @@
             color: #919191;
             background-color: #232323;
         }
-        #header,#container,#footer {
+        #container,#footer {
             display: block;
             width: 960px;
             margin: 0 auto;
