--- a/HTML/RWD/Template2.css
+++ b/HTML/RWD/Template2.css
@@ -26,20 +26,7 @@ nav ul {
   display: inline-block;
   text-align: center;
 }
-@media only screen and (max-width: 768px) {
-  #header {
-    width: 100%;
-    background-color: red;
-  }
-  #header nav ul li {
-    display: block;
-    border-bottom: 3px solid white;
-    padding: 10px;
-  }
-  #header nav {
-    width: 100%;
-  }
-}
+
 * {
   padding: 0;
   margin: 0;
@@ -97,7 +84,7 @@ a {
 /* #header nav ul li.last {
   margin-right: 0; 
 }*/
-/* .row2 {
+.row2 {
   color: #979797;
   background-color: #ffffff;
 }
@@ -308,4 +295,116 @@ footer {
 }
 .f1_right {
   float: right;
-} */
+}
+[class*="col-"] {
+  width: 100%;
+}
+@media only screen and (max-width: 768px) {
+  .col-1 {
+    width: 8.33%;
+  }
+
+  .col-2 {
+    width: 16.66%;
+  }
+
+  .col-3 {
+    width: 25%;
+  }
+
+  .col-4 {
+    width: 33.33%;
+  }
+
+  .col-5 {
+    width: 41.66%;
+  }
+
+  .col-6 {
+    width: 50%;
+  }
+
+  .col-7 {
+    width: 58.33%;
+  }
+
+  .col-8 {
+    width: 66.66%;
+  }
+
+  .col-9 {
+    width: 75%;
+  }
+
+  .col-10 {
+    width: 83.33%;
+  }
+
+  .col-11 {
+    width: 91.66%;
+  }
+
+  .col-12 {
+    width: 100%;
+  }
+  #header {
+    width: 100%;
+    background-color: red;
+  }
+  #header nav ul li {
+    display: block;
+    border-bottom: 3px solid white;
+    padding: 10px;
+  }
+  #header nav {
+    width: 100%;
+  }
+  .one_quarter {
+    float: none;
+    width: 100%;
+  }
+  #container #homepage #latest figure img {
+    display: block;
+    width: 80%;
+  }
+  #container #homepage #latest figure figcaption {
+    width: 80%;
+    text-align: center;
+  }
+  .shout p {
+    display: block;
+    width: 100%;
+    background: blue;
+    text-align: center;
+    font-weight: bold;
+  }
+  /* #container #content #services ul li article figure img{
+
+  } */
+  #container #content #services ul li article figure img {
+    display: block;
+    width: 100%;
+    background: green;
+  }
+  #container #content #services ul li article figure figcaption {
+    width: 100%;
+    text-align: center;
+  }
+  #container #right_column {
+    float: left;
+    width: 100%;
+  }
+  /* #container #right_column h2 { 
+    width: 100%;
+    display: block;
+    background: red;
+  }
+  #container #right_column nav ul li {
+    width: 100%;
+    background-color: red;
+  }*/
+  #footer {
+    width: 100%;
+    display: block;
+  }
+}
